--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ocn-tracer",
   "version": "0.0.1",
-  "main": "main.js",
+  "main": "src/browser/boot.js",
   "scripts": {
     "start": "./node_modules/electron-prebuilt/dist/Electron.app/Contents/MacOS/Electron ."
   },
