--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "coffee-script": "^1.9.2",
-    "electron-prebuilt": "^0.25.1"
+    "electron-prebuilt": "^0.25.1",
+    "space-pen": "^5.1.1"
   }
 }
